--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,28 @@
 #work h3{
     padding-bottom: 50px;
 }
+#work h4{
+    padding-bottom: 20px;
+}
 #work h3 a{
     text-decoration: none;  
 }
 #work h3 a:hover{
+    color: white;
+}
+.my_work ul{
+    margin: 0;
+    padding: 0;
+}
+.my_work ul li{
+    list-style: none;
+    padding-bottom: 25px;
+}
+.my_work ul li a{
+    text-decoration: none;
+    color: gray;
+}
+.my_work ul li a:hover{
     color: white;
 }
 .box_padding{
@@ -125,12 +143,30 @@
 #social li{
     background-color:#2F3238;
     padding: 0px;
-    margin: 20px;
+    margin: 30px;
 }
 #social li:hover{
-     transform: rotate(360deg);
-     transition: all 1s;
+    // opacity: 0.3;
+    transform: rotateY(180deg);
+    transition: all 400ms ease-out 0s;
 }
+#social li a{
+    padding: 31px;
+    margin: 0px;
+}
+
 #social li a:hover{
-     background: darkmagenta;
+    background: #DE5E60;
+    transform: rotateY(180deg);
+    transition: all 400ms ease-out 0s;
+}
+footer{
+    background-color:#2F3238;
+    color: white;
+    padding-top: 50px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+.footer p a{
+    text-decoration: none;
 }
